--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
                     <div class="banana"></div>
                     <div class="banana-line"></div>
                 </div>
-                <button id="hBonus">bonus</button>
+                <div id="hBonus bonusItem">
+                    <div class="bananaBonus"></div>
+                    <div class="bananaBonus-line"></div>
+                </div>
         </div>
         <div class="rightColumn"> <!-- Right column -- Contains the autoclick buttons and infos-->
             <div class="rope">
