--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
             </div>
         </div>
         <div class="centralColumn"> <!-- Central column -- Contains the title and the banana icon-->
-               <div id= TitleFont> <h1>Jungle Banana Jungle</h1> </div> 
-                <div id="hClick" class="bananaItem hoverable">
+                <div id= TitleFont> <h1>Jungle Banana Jungle</h1> </div> 
+                <div id="hClick" class="bananaItem">
                     <div class="banana"></div>
                     <div class="banana-line"></div>
                 </div>
-                <div id="hBonus bonusItem">
+                <div id="hBonus" class="bonusItem">
                     <div class="bananaBonus"></div>
                     <div class="bananaBonus-line"></div>
                 </div>
