--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="auto1Txt">
-                    <div class="monkey hoverable">
+                    <div class="monkey hoverable" id="A1">
                         <div class="head"></div>
                         <div class="earLeft">
                             <div class="innerEarLeft"></div>
@@ -191,6 +191,26 @@
                         </div>
                     </div>
                     <div id="hAutoclick">autoclick</div>
+                </div>
+                <div class="auto1Txt">
+                    <div class="monkey hoverable" id="A2">
+                        <div class="head"></div>
+                        <div class="earLeft">
+                            <div class="innerEarLeft"></div>
+                        </div>
+                        <div class="earRight">
+                            <div class="innerEarRight"></div>
+                        </div>
+                        <div class="lowerWhite"></div>
+                        <div class="upperWhite">
+                            <div class="eyeLeft"></div>
+                            <div class="eyeRight"></div>
+                            <div class="mouth"></div>
+                            <div class="noseLeft"></div>
+                            <div class="noseRight"></div>
+                        </div>
+                    </div>
+                    <div id="hAutoclick2">autoclick</div>
                 </div>
             </div>
         </div>
