some comments made on the html file

--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
 </head>
 <body>
 
-    <!-- Main content - divided in three columns -->
-    <div id="page">
+    <div id="page">  <!-- Main content - divided in three columns -->
         <div class="leftColumn"> <!-- Left column -- Contains 2 pannels (one with the game info and the second with the multiplier button-->
-            <div class="rope">
+            <div class="rope"> <!-- Rope div -- Only a visual role-->
                 <div class="leftRope"></div>
                 <div class="rightRope"></div>
-            </div> <!-- Rope div-->
-            <div class="rope">
+            </div> 
+            <div class="rope"> <!-- Rope div -- Only a visual role-->
                     <div class="leftRope"></div>
                     <div class="rightRope"></div>
             </div>
-            <div class="infos"> <!-- Pannel div-->
-                <div class="plank small"> <!-- Div creating the plank texture-->
+            <div class="infos"> <!-- Pannel div containing the game infos and stats -->
+                <div class="plank small"> <!-- Div creating the plank texture - Images are overrated -->
                     <div class="texture3">
                         <div class="nail pos1"></div>
                         <div class="nail pos2"></div>
@@ -62,10 +61,10 @@
                     <div id="hPerSecond">0 banana(s)/second</div>
                 </div>
             </div>
-            <div class="rope">                
+            <div class="rope"> <!-- Rope div -- Only a visual role-->               
                 <div class="leftRope"></div>
                 <div class="rightRope"></div></div>
-            <div class="mult">
+            <div class="mult"> <!-- Pannel div containing the multiplier button -->
                 <div class="plank small">
                     <div class="texture2">
                         <div class="nail pos1"></div>
@@ -102,7 +101,7 @@
                 <div class="multTxt">
                     <span id="hMultiplier">multiplier</span>
                 </div>
-                <div class="bananaGrappe pointer" class="hoverable">
+                <div class="bananaGrappe pointer" class="hoverable">  <!-- Visual div -- Used to create a bunch of bananas -->
                     <div class="multBanana3">
                         <div class="bananaMult"></div>
                         <div class="banana-lineMult"></div>
@@ -215,8 +214,8 @@
             </div>
         </div>
     </div> 
-    <div class="reset">
-        <div class="rope">
+    <div class="reset"> <!-- Reset Button -->
+        <div class="rope"> 
                 <div class="leftRope"></div>
                 <div class="rightRope"></div>
         </div>
