--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="auto2Txt">
                     <div class="monkey2 hoverable" id="A2">
                         <!-- Circular Head -->
-                        <div class="head">
+                        <div class="head2">
                         <!-- Circular Head Copy -->
                         <div class="head-copy"></div>
                         <div class="head-left-side"></div>
@@ -237,7 +237,7 @@
                         <div class="nostril-right"></div>
                             <!-- Nose ~ Black -->
                         <!-- Mouth ~ Black -->
-                        <div class="mouth"></div>
+                        <div class="mouth2"></div>
                         </div>
                         <!-- End Circular Head -->
                     </div>
