--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
         </div>
         <div class="centralColumn"> <!-- Central column -- Contains the title and the banana icon-->
                 <div id= TitleFont> <h1>Jungle Banana Jungle</h1> </div> 
-                <div id="hClick" class="bananaItem">
+                <div id="hClick">
                     <div class="banana"></div>
                     <div class="banana-line"></div>
                 </div>
-                <div id="hBonus" class="bonusItem">
+                <div id="hBonus">
                     <div class="bananaBonus"></div>
                     <div class="bananaBonus-line"></div>
                 </div>
