--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
                 <div class="auto1Txt">
-                    <div class="monkey hoverable" id="A1">
+                    <div class="monkey" id="A1">
                         <div class="head"></div>
                         <div class="earLeft">
                             <div class="innerEarLeft"></div>
@@ -192,7 +192,7 @@
                     <div id="hAutoclick">autoclick</div>
                 </div>
                 <div class="auto2Txt">
-                    <div class="monkey2 hoverable" id="A2">
+                    <div class="monkey2" id="A2">
                         <!-- Circular Head -->
                         <div class="head2">
                         <!-- Circular Head Copy -->
